# alpasai

./: .coveragerc  .gitignore  Dockerfile  README.md  explore.ipynb  pyproject.toml
entity_matcher/: __init__.py  api.py  classifier.py  train.py
models/: entity_matcher.joblib
tests/: test_api.py  test_model.py
