[tool.poetry]
name = "entity-matcher"
version = "0.1.0"
description = "Entity name matching model for resolving company names"
packages = [{include = "entity_matcher"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
numpy = "^1.26.0"
joblib = "^1.3.2"
flask = "^3.0.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=entity_matcher --cov-report=term-missing" 
